# toolbelt

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  calendar_script.py  mypy.ini  pyproject.toml
dandiscribe_source_files/: test_pages-8.sla  test_pages.sla
docker/testme/: Dockerfile
docker/testme/build_scripts/: entrypoint.sh  preload.sh
scripts/: bookme.py  get_env.py  help_script.py
shelltools/: pdf-size.sh
src/: script.py
src/dandiscribe/: calendar.py  colors.py  data.py  enums.py  exceptions.py  layout.py  log.py  objects.py  routines.yml  scribus_data.py  script.py  script_utils.py  style.py  util.py
src/dandiscribe/calendar/: __init__.py  data.py  layout.py  main.py  pages.py  script.py
src/dandiscribe/fonts/: OFL.txt
src/dandiscribe/source_files/: test_pages-12.sla  test_pages-16.sla  test_pages-8-half.sla
src/dandiscribe/zine/: gen_script.py  layout.py  layout_script.py
src/danditex/: word_count.py
src/danditools/: blog_combine.py  cat_html.py  cleanup_transcript.py  codingame shit  pdf.py  scholar.py  scraper.py  strip_wayback.py  xrandr_parse.py
task/cache_python_deps/: Taskfile.yml
task/scribus/: Taskfile.yml
tests/dandiscribe/: scribus_module_mock.py  test_calendar.py
type_stubs/: make_scribus_stubs.py  scribus.pyi
type_stubs/dandiscribe/: colors.pyi  data.pyi  enums.pyi  exceptions.pyi  layout.pyi  log.pyi  objects.pyi  scribus_data.pyi  script_utils.pyi  style.pyi  util.pyi
type_stubs/dandiscribe/calendar/: __init__.pyi  data.pyi  layout.pyi  main.pyi  pages.pyi
type_stubs/dandiscribe/zine/: gen_script.pyi  layout.pyi  layout_script.pyi
type_stubs/danditools/: blog_combine.pyi  cat_html.pyi  cleanup_transcript.pyi  pdf.pyi  scholar.pyi  scraper.pyi  strip_wayback.pyi  xrandr_parse.pyi
