[project]
name = "danditools"
dynamic = ["version", "readme"]
description = "My personal toolbelt"
requires-python = "~=3.13"
license = "GPL-3.0-only"
authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]

dependencies = [
    "annotated-types~=0.7.0",
    "beautifulsoup4~=4.13",
    "gdown~=5.2",
    "icalendar~=6.3",
    "requests~=2.32",
    "pyyaml~=6.0",
    "platformdirs~=4.3",
    "pypdf~=6.1",
    "dandy_lib@git+http://github.com/pretty-weed/py_libs@v0.7.1",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
dandiscribe = ["routines.yml", "fonts/OFL.txt", "fonts/*/*.ttf", "fonts/*/*.otf"]

danditools = ["type_stubs/py.typed"]

[project.optional-dependencies]
test = ["tox~=4.28"]
tooling = [
    "pre-commit~=4.3",
    "reorder-python-imports~=3.16",
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "types-icalendar",
    "mypy~=1.18"
]
pytest = [
    "pytest-cov~=7.0",
    "pytest~=9.0",
    "pytest-xdist~=3.8"
]
lint = ["black~=25.1"]
profile = ["snakeviz~=2.2"]
type = [
    "types-PyYAML~=6.0",
    "pytest-mypy~=1.0",
    "types-icalendar",
    "types-requests",
    "mypy~=1.18"
]
clean = [
    "coverage~=7.12"
]


[tool.tox]
requires = ["tox~=4.28", "virtualenv-pyenv"]
extras = ["pytest"]
env_list = ["clean", "3.13", "3.14", "3.15", "type", "lint"]


[tool.tox.env_run_base]
description = "Run test under {base_python}"
extras = ["pytest"]
commands = [["pytest", "--cov=dandy_lib", "--cov-append", "--cov-report=term-missing", { replace = "posargs", default = ["-vv"], extend = true } ]]
[tool.tox.env_run_base.set_env]
VIRTUALENV_DISCOVERY = "pyenv"


[tool.tox.env.clean]
skip_install = true
deps = ["coverage"]
allowlist_externals = ["which"]
commands = [["which", "-a", "coverage"], ["coverage", "erase"]]

[tool.tox.env.report]
skip_install = true
deps = ["coverage"]
commands = [["coverage", "report", "--fail-under=100"]]

[tool.tox.env.pyenv]
requires = ["virtualenv-pyenv"]
commands = [["pytest", { replace = "posargs", default = [], extend = true } ]]
[tool.tox.env.pyenv.set_env]
VIRTUALENV_DISCOVERY = "pyenv"

[tool.tox.env.type]
description = "run type check on code base"
extras = ["type"]
commands = [["mypy", "src"], ["mypy", "tests"]]
[tool.tox.env.type.set_env]
MYPATH = "type_stubs"


[tool.tox.env.lint]
description = "Run linting on code base"
extras = ["lint"]
commands = [["black", "src"], ["black", "tests"]]

[project.scripts]
scraper = "danditools.scraper:main"
xrandr-parse = "danditools.xrandr_parse:main"
blog-combine = "danditools.blog_combine:main"
cleanup-transcript = "danditools.cleanup_transcript:main"
pdf-split = "danditools.pdf:split"
pdf-demo = "danditools.pdf:demo"


[tool.setuptools_scm]

[tool.black]
line-length = 80

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel"]
build-backend = "setuptools.build_meta"
